# citesight

./: .env.example  .gitignore  README.md  constraints.md  pyproject.toml
docker/: docker-compose.yml
eval/golden/: seed.jsonl
notebooks/: colab_runbook.ipynb
src/citesight/: cli.py  diagnostics.py  pipeline.py  schemas.py
src/citesight/agent/: graph.py  hybrid_adapter.py  prompt_loader.py  state.py
src/citesight/agent/prompts/: CHANGELOG.md  composer_v1.md  judge_v1.md  router_v1.md  verifier_v1.md  vlm_answer_v1.md  vlm_answer_v2.md
src/citesight/config/: settings.py
src/citesight/eval/: baseline.py  golden.py  judge.py  metrics.py  runner.py
src/citesight/ingest/: edgar.py  indexer.py  render.py
src/citesight/models/: llm.py  registry.py  retriever.py  text_retrieval.py  vlm.py
src/citesight/observability/: tracing.py
src/citesight/store/: manifest.py  qdrant_store.py
src/citesight/utils/: json_parsing.py
tests/: test_agent_graph.py  test_edgar.py  test_eval.py  test_llm.py  test_manifest.py  test_pipeline.py  test_provider_canaries.py  test_render.py  test_store.py  test_text_retrieval.py  test_tracing.py  test_vlm_parsing.py
