[project]
name = "citesight"
version = "0.1.0"
description = "Agentic multimodal RAG over SEC filings with visual retrieval and region-level page citations"
requires-python = ">=3.11,<3.13"
readme = "README.md"
dependencies = [
    "colpali-engine>=0.3.1,<0.4",
    # transformers 4.52+ renamed Qwen2.5-VL keys (model.layers -> language_model.layers),
    # which silently drops the ColQwen2.5 LoRA adapter weights. See constraints.md.
    "transformers>=4.49.0,<4.52",
    "torch>=2.2",
    "qdrant-client>=1.12",
    "httpx>=0.27",
    "pymupdf>=1.24",
    "pillow>=10.0",
    "numpy>=1.26",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "tenacity>=8.2",
    "openai>=1.60",
    "langgraph>=0.3",
    "langgraph-checkpoint-sqlite>=2.0",
    "langfuse>=2.50",
    "qwen-vl-utils>=0.0.8",
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2.2",
    # qwen-vl-utils imports torchvision but does not declare it (see constraints.md)
    "torchvision>=0.21",
    "accelerate>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
]
gpu = [
    # CUDA-only: 4-bit quantization for the 7B VLM on <24GB cards (T4/Colab)
    "bitsandbytes>=0.44; sys_platform == 'linux'",
]

[project.scripts]
citesight = "citesight.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/citesight"]

[tool.pytest.ini_options]
testpaths = ["tests"]
